syntax = "proto3";
package nbcontract.v1;

message KubeletConfig {
  // A map of kubelet flags to their values.
  map<string, string> kubelet_flags = 1;

  // A map of node labels to their values.
  map<string, string> kubelet_node_labels = 2;

  // A list of taints to apply to the node.
  repeated Taint taints = 3;

  // A list of taints to apply to the node at startup.
  repeated Taint startup_taints = 4;

  // The type of disk to use for the kubelet.
  KubeletDisk kubelet_disk_type = 5;

  // Whether kubelet config should be enabled.
  bool enable_kubelet_config_file = 6;

  // Base64 encoded content of the kubelet config file.
  string kubelet_config_file_content = 7;

  // Kubelet client private key
  string kubelet_client_key = 8;

  // The content of the kubelet client certificate file.
  string kubelet_client_cert_content = 9;

  // The path used to mount docker images, emptyDir volumes, and kubelet data.
  string container_data_dir = 10;
}

message Taint {
  string key = 1;
  string effect = 2;
}

enum KubeletDisk {
  KD_UNSPECIFIED = 0;
  OS_DISK = 1;
  TEMP_DISK = 2;
}